<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/image_error"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/error"
            android:src="@drawable/disconnecticon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_network_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/again"
            android:visibility="gone"
            style="@android:style/Widget.Material.Light.ButtonBar"
            app:layout_constraintTop_toBottomOf="@+id/image_error"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <ScrollView
            android:id="@+id/scroll_detail_beer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginVertical="5dp"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/image_beer"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_margin="6dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription"
                            tools:srcCompat="@tools:sample/avatars" />

                        <com.example.codechallengedrop.ui.components.ColorAbvStatusBallComponent
                            android:id="@+id/color_abv_status"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            app:layout_constraintBottom_toBottomOf="@+id/abv_beer_title"
                            app:layout_constraintLeft_toLeftOf="@+id/image_beer"
                            app:layout_constraintTop_toTopOf="@+id/abv_beer_title" />

                        <TextView
                            android:id="@+id/abv_beer_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="2dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/abv"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toRightOf="@+id/color_abv_status"
                            app:layout_constraintTop_toBottomOf="@+id/image_beer" />

                        <TextView
                            android:id="@+id/abv_beer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="3dp"
                            android:layout_marginTop="5dp"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toRightOf="@+id/abv_beer_title"
                            app:layout_constraintTop_toBottomOf="@+id/image_beer"
                            tools:text="0.0%" />

                        <TextView
                            android:id="@+id/description_beer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginTop="20dp"
                            android:paddingHorizontal="12dp"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/abv_beer"
                            tools:text="@string/lorem_ipsum" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_hops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginVertical="5dp"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_main">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/title_hops"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/hops"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_hops"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/title_hops"
                            tools:itemCount="3"
                            tools:listitem="@layout/ingredient_component" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_malt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginVertical="5dp"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_hops">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/title_malt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/malts"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_malts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/title_malt"
                            tools:itemCount="3"
                            tools:listitem="@layout/ingredient_component" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginVertical="5dp"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_malt">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/title_method"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/methods"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_method"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/title_method"
                            tools:itemCount="3"
                            tools:listitem="@layout/ingredient_component" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
